Fix some heights and widths on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ a:visited, a:focus, a:hover, a:active {
 }
 .slide1{
 
-	height:100vh;
+	min-height:100vh;
 	width:100%;
 	color: #fff;
 	overflow: hidden;
